# chess

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  todo.txt
cmake/: clang.cmake  test_helper.cmake
src/: CMakeLists.txt  main.cpp
src/support_lib/: CMakeLists.txt  lib.hpp
src/support_lib/test/: libtest.cpp
